--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
     <hr>
 
-    <p> <a href="C:\Users\Home\OneDrive\Documents\web development\HTML-personal site\hobbies.html">my hobbies</a>
-    <a href="C:\Users\Home\OneDrive\Documents\web development\HTML-personal site\contacts.html">contact details</a> </p>
-    <a href="C:\Users\Home\OneDrive\Documents\web development\HTML-personal site\input.html">inputs</a>
+    <p> <a href="hobbies.html">my hobbies</a>
+    <a href="contacts.html">contact details</a> </p>
+    <a href="input.html">inputs</a>
     <h3>EDUCATION</h3>
     <ul>
         <li>schoolings in petit</li>
