--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <hr>
 
-    <p> <a href="hobbies.html">my hobbies</a>
+    <p> <a href="https://github.com/Harriprasad/cv/blob/bdb088c388614003e21f797932205ec5b5340537/hobbies.html">my hobbies</a>
     <a href="contacts.html">contact details</a> </p>
     <a href="input.html">inputs</a>
     <h3>EDUCATION</h3>
